@@ -84,6 +84,8 @@ gdoc_MANS += man/gsasl_nonce.3
 gdoc_MANS += man/gsasl_random.3
 gdoc_MANS += man/gsasl_md5.3
 gdoc_MANS += man/gsasl_hmac_md5.3
+gdoc_MANS += man/gsasl_sha1.3
+gdoc_MANS += man/gsasl_hmac_sha1.3
 gdoc_MANS += man/gsasl_done.3
 gdoc_MANS += man/gsasl_strerror.3
 gdoc_MANS += man/gsasl_strerror_name.3
@@ -221,6 +223,8 @@ gdoc_TEXINFOS += texi/gsasl_nonce.texi
 gdoc_TEXINFOS += texi/gsasl_random.texi
 gdoc_TEXINFOS += texi/gsasl_md5.texi
 gdoc_TEXINFOS += texi/gsasl_hmac_md5.texi
+gdoc_TEXINFOS += texi/gsasl_sha1.texi
+gdoc_TEXINFOS += texi/gsasl_hmac_sha1.texi
 gdoc_TEXINFOS += texi/gsasl_done.texi
 gdoc_TEXINFOS += texi/gsasl_strerror.texi
 gdoc_TEXINFOS += texi/gsasl_strerror_name.texi
