@@ -59,6 +59,7 @@ gsasl_finish (Gsasl_session * sctx)
   free (sctx->qop);
   free (sctx->scram_iter);
   free (sctx->scram_salt);
+  free (sctx->scram_salted_password);
 
   free (sctx);
 }
