@@ -5,7 +5,8 @@ See the end for copying conditions.
 * Version 1.3 (unreleased)
 
 ** libgsasl: Implement SCRAM-SHA-1.
-New properties are GSASL_SCRAM_ITER and GSASL_SCRAM_SALT.
+New properties are GSASL_SCRAM_ITER, GSASL_SCRAM_SALT, and
+GSASL_SCRAM_SALTED_PASSWORD.
 
 ** libgsasl: Add helper APIs for SHA-1 and HMAC-SHA-1.
 New functions are gsasl_sha1 and gsasl_hmac_sha1.
